--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,4 +15,4 @@ spring.datasource.initialization-mode=never
 spring.jpa.show-sql=false
 
 # Pasta para uploads (Linux)
-app.upload.dir=/tmp/uploads
+app.upload.dir=c:/uploads
