--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -12,4 +12,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Define a pasta onde os arquivos ser\uFFFDo salvos.
-app.upload.dir=d:/uploads
+app.upload.dir=c:/uploads
