--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,13 @@
 spring.application.name=projeto-pratico
 
 # Configurações do Banco de Dados
-spring.datasource.url=jdbc:mysql://localhost:3306/ds-projeto
+spring.datasource.url=jdbc:mysql://localhost:3306/projeto
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate: cria o schema do zero a cada start para desenvolvimento
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # Scripts SQL serão executados (se houver schema.sql/import.sql)
 spring.datasource.initialization-mode=always
