--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,10 +6,11 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.url=${DATABASE_URL}
 
 # Atualiza o schema automaticamente sem perder dados 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 # Não executa scripts SQL automaticamente 
-spring.datasource.initialization-mode=never
+# spring.datasource.initialization-mode=never
+
 
 # Mostrar SQL no console
 spring.jpa.show-sql=false
