--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,7 +9,7 @@ spring.datasource.url=${DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=validate
 
 # Não executa scripts SQL automaticamente 
-# spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=never
 
 
 # Mostrar SQL no console
